--- a/src/components/platform/DialogModal/Simulator/index.module.css
+++ b/src/components/platform/DialogModal/Simulator/index.module.css
@@ -112,4 +112,82 @@
   text-decoration: none;
   flex-grow: 1;
   border: none;
+  font-family: PoppinsRegular;
+  font-size: 14px;
+  text-align: center;
+}
+
+.closeButtonModal {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .dialogModal {
+    position: fixed;
+    z-index: 2010;
+    top: 0;
+    left: 0;
+    background: white;
+    height: 100dvh;
+  }
+
+  .modalContainer {
+    padding: 16px;
+    border-radius: 2px;
+    background: var(--Conditional-pop-over, #FFF);
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
+    max-width: 100vw;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2010;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: inherit;
+    width: 100%;
+  }
+
+  .containerHead {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 8px;
+    margin-top: auto;
+  }
+
+  .containerBody {
+    padding: 16px;
+    margin-bottom: auto;
+  }
+
+  .footerButtons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 8px;
+    gap: 1rem;
+    flex-direction: column-reverse;
+  }
+
+  .buttonCancel,
+  .linkButtonBlue {
+    width: 100%;
+  }
+
+  .closeButtonModal {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: block;
+    padding: 4px;
+  }
+
+  .closeButtonModal button {
+    width: 28px;
+    height: 28px;
+    background-color: transparent;
+    border: none;
+  }
 }
