--- a/src/components/platform/PlanCourse/index.module.css
+++ b/src/components/platform/PlanCourse/index.module.css
@@ -66,3 +66,47 @@
   justify-content: flex-start;
   gap: 24px
 }
+
+img[data-display=true] {
+  transform: rotate(180deg);
+  transition: transform 200ms linear;
+}
+
+img[data-display=false] {
+  transform: rotate(0deg);
+  transition: transform 200ms linear;
+}
+
+@media screen and (max-width: 480px) {
+  .headerContent {
+    display: block;
+    position: relative;
+  }
+
+  .headerContent h5 {
+    font-size: 14px;
+    display: block;
+    width: 100%;
+    position: relative;
+  }
+
+  .headerContent span {
+    font-size: 12px;
+    display: block;
+    width: 100%;
+  }
+
+  .headerContent img {
+    position: absolute;
+    right: 0;
+    top: 8px;
+  }
+
+  .sectionBody {
+    padding: 14px;
+  }
+
+  .sectionHeader {
+    padding: 14px;
+  }
+}
