--- a/src/pages/platform/Course/index.module.css
+++ b/src/pages/platform/Course/index.module.css
@@ -50,16 +50,17 @@
 .courseCard:not(:last-child) {
   margin-bottom: 8px;
 }
- 
+
 .courseCard .cardHeader {
   border: 1px solid var(--Neutral-5, #D9D9D9);
   background: var(--Neutral-2, #FAFAFA);
   padding: 11px 16px;
 }
- 
-.courseCard[data-card="graficos"] .cardHeader { 
+
+.courseCard[data-card="graficos"] .cardHeader {
   background: var(--Sunset-Orange-1, #FFF7E6);
 }
+
 .cardHeader .cardTitle {
   display: flex;
   gap: 12px;
@@ -301,4 +302,107 @@ section#advance {
   border-radius: 2px;
   background: rgba(5, 178, 250, 1);
   color: var(--character-primary-inverse, #FFF);
-} 
+}
+
+@media screen and (max-width: 480px) {
+  .wrapper {
+    padding: 16px;
+  }
+
+  .gridContainer {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 12px;
+  }
+
+  #advance {
+    position: fixed;
+    z-index: 1080;
+    display: none;
+  }
+
+  #studyMethods .sectionHeader {
+    padding: 14px 14px 2px 14px;
+  }
+
+  #studyMethods .sectionBody {
+    padding: 2px 14px 14px 14px;
+    overflow-x: hidden;
+  }
+
+  .sectionHeader h5 {
+    font-size: 14px;
+  }
+
+  .sectionBody p {
+    font-size: 12px;
+  }
+
+  .sectionHeader {
+    box-shadow: unset
+  }
+
+  .methodDescription h5 {
+    font-size: 15px;
+    white-space: nowrap;
+  }
+
+  .methodDescription span {
+    font-size: 12px;
+    margin: 0;
+    white-space: nowrap;
+  }
+
+  .methodNumber::before {
+    display: none !important;
+  }
+
+  .methodList {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 12px;
+    position: relative;
+    overflow-x: scroll;
+  }
+
+  .method {
+    margin: 0;
+    align-items: center;
+    gap: 8px;
+  }
+
+  #containerCourse .headerContent {
+    padding: 14px;
+  }
+
+  .headerContent .contentTop {
+    margin-bottom: 12px;
+    gap: 4px;
+  }
+
+  .contentTop h4 {
+    font-size: 24px;
+  }
+
+  .cardDescription {
+    padding-left: 24px;
+  }
+
+  .cardDescription span,
+  .cardDescription  p{
+    display: block;
+    margin-left: unset;
+  }
+
+  .buttons {
+    flex-direction: column-reverse;
+    gap: 12px;
+    padding-top: 16px; 
+    padding-bottom: 0px;
+  }
+
+}
+
+* {
+  outline: 1px solid red;
+}
