--- a/src/pages/platform/StudyGuide/index.module.css
+++ b/src/pages/platform/StudyGuide/index.module.css
@@ -106,4 +106,19 @@
   *[data-size=xl] {
     display: none;
   }
+
+  .containerBody {
+    padding: 16px;
+  }
+
+
+  .guideIntroduction {
+    width: 100%;
+    margin-inline: unset;
+  }
+
+  .documentLink {
+    display: block;
+    margin-top: 16px;
+  }
 }
