--- a/src/pages/platform/StudyGuide/index.module.css
+++ b/src/pages/platform/StudyGuide/index.module.css
@@ -103,8 +103,8 @@
     padding: 12px 16px;
   }
 
-  *[data-size=xl] {
-    display: none;
+  a[data-size="xl"] {
+    display: none !important;
   }
 
   .containerBody {
