--- a/src/css/App.css
+++ b/src/css/App.css
@@ -129,7 +129,7 @@
 html {
     background-color: var(--white);
     overflow-x: hidden;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 
 body {
