--- a/src/pages/platform/StudyGuide/index.module.css
+++ b/src/pages/platform/StudyGuide/index.module.css
@@ -98,6 +98,11 @@
   font-size: 14px;
 }
 
+
+a[data-size="sm"] {
+  display: none !important;
+}
+
 @media screen and (max-width: 480px) {
   .wrapper {
     padding: 12px 16px;
@@ -105,6 +110,10 @@
 
   a[data-size="xl"] {
     display: none !important;
+  }
+
+  a[data-size="sm"] {
+    display: block !important;
   }
 
   .containerBody {
