--- a/src/views/Resources/index.module.css
+++ b/src/views/Resources/index.module.css
@@ -80,6 +80,27 @@
   margin-top: 60px;
 }
 
+.gridCard .imageContainer::before {
+  content: '';
+  width: 44px;
+  height: 44px;
+  position: absolute;
+  background: linear-gradient(270deg, hsla(0, 0%, 100%, 0), hsla(0, 0%, 100%, 0.35), hsla(0, 0%, 100%, 0.1));
+  left: -44px;
+  display: block;
+  transition: all 400ms;
+}
+
+.gridCard:hover .imageContainer::before {
+  left: 44px;
+  transition: left 550ms;
+  transition: all 400ms;
+}
+
+.gridCard:hover .imageContainer {
+  transform: scale(1.25);
+  transition: all 200ms;
+}
 
 @media screen and (max-width: 1024px) {
   #resources .sectionContainer {
