--- a/src/css/App.css
+++ b/src/css/App.css
@@ -593,6 +593,15 @@ button:hover {
   border: none;
   transition: background-color 250ms linear;
 }
+.button-rounded-blue-48--disabled {
+  background-color: var(--gray); 
+  cursor: not-allowed; 
+  opacity: 0.6; 
+}
+.button-rounded-blue-48--disabled:hover {
+  cursor: not-allowed; 
+  background-color: var(--gray); 
+}
 
 .button-rounded-blue-48 .button-text {
   font-family: MontserratBold;
