--- a/src/components/platform/PlanCourseCollapse/index.module.css
+++ b/src/components/platform/PlanCourseCollapse/index.module.css
@@ -8,6 +8,7 @@
   border-bottom: none;
   border-right: 1px solid #D9D9D9;
   background: var(--Neutral-2, #FAFAFA);
+  width: 100%;
 }
 
 .itemContent {
@@ -122,13 +123,13 @@
 }
 
 .dayClass span {
-  font-family: Roboto;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
   color: rgba(0, 0, 0, 0.45);
-  margin-left: 12px;
+
 }
 
 .contentBody {
