--- a/src/pages/Platform/SimulatorCourse/index.module.css
+++ b/src/pages/Platform/SimulatorCourse/index.module.css
@@ -95,12 +95,13 @@ aside .containerBody {
   background: var(--Neutral-3, #F5F5F5);
 
   color: var(--character-title-85, rgba(0, 0, 0, 0.85));
-  font-family: Roboto;
+  font-family: PoppinsRegular;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
   margin-right: 0.5px;
+  
 }
 
 
@@ -113,7 +114,7 @@ aside .containerBody {
   border-radius: 2px;
 
   color: var(--character-title-85, rgba(0, 0, 0, 0.85));
-  font-family: Roboto;
+  font-family: PoppinsRegular;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
